[metadata]
name = symmetryshift
description = Create biological strucre unit from single PDB file
long_description = file: README.md
long_description_content_type = text/markdown
author = flat35hd99
url = https://jphacks.github.io/D_2110/docs/home/
platforms = any
classifier =
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
project_urls =
    Bug Tracker = https://github.com/jphacks/D_2110/issues
    Documentation = https://jphacks.github.io/D_2110/docs/home/
    Source Code = https://github.com/jphacks/D_2110/

[bdist_wheel]
universal = 1

[versioneer]
VCS = git
style = pep440
versionfile_source = symmetryshift/_version.py
versionfile_build = symmetryshift/_version.py
tag_prefix = v
parentdir_prefix = symmetryshift-

[flake8]
max-line-length = 88
extend-ignore = E203